--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     runtimeOnly group: 'org.apache.taglibs', name: 'taglibs-standard-impl', version: '1.2.5'
     // https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-spec
     implementation group: 'org.apache.taglibs', name: 'taglibs-standard-spec', version: '1.2.5'
-
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation group: 'org.json', name: 'json', version: '20090211'
 }
 
 test {
